--- a/css/animalstyle.css
+++ b/css/animalstyle.css
@@ -19,3 +19,14 @@ body {
   background-color: yellow;
     letter-spacing: 7px;
 }
+
+#gohome {
+  display: block;
+  margin-left: 40%;
+  margin-top: 20px;
+  background-color: yellow;
+    letter-spacing: 7px;
+  font-family: Megrim;
+  text-align: right;
+  opacity: .9;
+}
