--- a/css/animalstyle.css
+++ b/css/animalstyle.css
@@ -27,6 +27,7 @@ body {
   background-color: yellow;
     letter-spacing: 7px;
   font-family: Megrim;
+  color: black;
   text-align: right;
   opacity: .9;
 }
