--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   text-align: right;
 }
 
-#placeholder {
+/*#placeholder {
   float: left;
 }
 
@@ -29,7 +29,7 @@ body {
 font-family: Roboto Slab;
 color: black;
 text-align: right;
-}
+}*/
 
 #linkbar {
   display: block;
